--- a/data/wikipedia-with-spam/en.wikipedia.org/zzz-fake-seattle.html
+++ b/data/wikipedia-with-spam/en.wikipedia.org/zzz-fake-seattle.html
@@ -11,17 +11,17 @@ local: false
 
     <!-- Bootstrap -->
 
-    <link 
-        rel="stylesheet" 
+    <link
+        rel="stylesheet"
         href="resources/vendors/bootstrap-4.0.0-alpha.6.min.css" />
     <script src="resources/vendors/jquery-3.1.1.slim.min.js"></script>
     <script src="resources/vendors/bootstrap-4.0.0-alpha.6.min.js"></script>
 
     <!-- Custom CSS -->
 
-    <link 
-        rel="stylesheet" 
-        href="resources/styles.css" 
+    <link
+        rel="stylesheet"
+        href="resources/styles.css"
         type="text/css" />
 </head>
 <body>
@@ -31,7 +31,7 @@ local: false
 
     <h2>Overview</h2>
 
-    <p>This page is attempting to artificially inflate their ranking results for keywords 
+    <p>This page is attempting to artificially inflate their ranking results for keywords
     related to the word "Seattle". There are many ways to accomplish this, but we'll
     opt for a relatively obvious approach -- we'll just copy a bunch of text from wikipedia
     pages related to what we want to spoof to try and generate similar tf-idf scores.</p>
@@ -135,6 +135,42 @@ Timber town
 Seattle's first streetcar, at the corner of Occidental and Yesler, 1884. All of the buildings visible in this picture were destroyed by fire five years later.
 
 Seattle has a history of boom-and-bust cycles, like many other cities near areas of extensive natural and mineral resources. Seattle has risen several times economically, then gone into precipitous decline, but it has typically used those periods to rebuild solid infrastructure.[28]
+
+        The second and most dramatic boom resulted from the Klondike Gold Rush, which ended the depression that had begun with the Panic of 1893. In a short time, Seattle became a major transportation center. On July 14, 1897, the S.S. Portland docked with its famed "ton of gold", and Seattle became the main transport and supply point for the miners in Alaska and the Yukon. Few of those working men found lasting wealth. However, it was Seattle's business of clothing the miners and feeding them salmon that panned out in the long run. Along with Seattle, other cities like Everett, Tacoma, Port Townsend, Bremerton, and Olympia, all in the Puget Sound region, became competitors for exchange, rather than mother lodes for extraction, of precious metals.[36] The boom lasted well into the early part of the 20th century, and funded many new Seattle companies and products. In 1907, 19-year-old James E. Casey borrowed $100 from a friend and founded the American Messenger Company (later UPS). Other Seattle companies founded during this period include Nordstrom and Eddie Bauer.[33] Seattle brought in the Olmsted Brothers landscape architecture firm to design a system of parks and boulevards.[37]
+Pioneer Square in 1917 featuring the Smith Tower, the Seattle Hotel and to the left the Pioneer Building
+
+The Gold Rush era culminated in the Alaska-Yukon-Pacific Exposition of 1909, which is largely responsible for the layout of today's University of Washington campus.[38]
+
+A shipbuilding boom in the early part of the 20th century became massive during World War I, making Seattle somewhat of a company town. The subsequent retrenchment led to the Seattle General Strike of 1919, the first general strike in the country.[39] A 1912 city development plan by Virgil Bogue went largely unused. Seattle was mildly prosperous in the 1920s but was particularly hard hit in the Great Depression, experiencing some of the country's harshest labor strife in that era. Violence during the Maritime Strike of 1934 cost Seattle much of its maritime traffic, which was rerouted to the Port of Los Angeles.[40]
+
+The Great Depression in Seattle affected many minority groups, one being the Asian Pacific Americans; they were subject to racism, loss of property, and failed claims of unemployment due to citizenship status.[41]
+
+Seattle was one of the major cities that benefited from programs such as the WPA, CCC, UCL, and PWA.[42][43] The workers, mostly men, built roads, parks, dams, schools, railroads, bridges, docks, and even historical and archival record sites and buildings. However, Seattle faced massive unemployment, loss of lumber and construction industries as Los Angeles prevailed as the bigger West Coast city. Seattle had building contracts that rivaled New York City and Chicago, but lost to LA as well. Seattle’s eastern farm land faded due to Oregon’s and the Midwest’s, forcing people into town.[44][45]
+
+The famous Hooverville arose during the Depression, leading to Seattle’s growing homeless population. Stationed outside Seattle, the Hooverville housed thousands of men but very very few children and no women. With work projects close to the city, Hooverville grew and the WPA settled into the city.[46]
+
+A movement by women arose from Seattle during the Depression. Fueled by Eleanor Roosevelt’s book It’s Up to the Women, women pushed for recognition, not just as housewives, but as the backbone to family. Using newspapers and journals Working Woman and The Woman Today, women pushed to be seen as equal and receive some recognition.[47]
+
+Seattle’s University of Washington was greatly affected during the Depression era. As schools across Washington lost funding and attendance, the UW actually prospered during the time period. While Seattle public schools were influenced by Washington’s superintendent Worth McClure,[48] they still struggled to pay teachers and maintain attendance. The UW, despite academic challenges that plagued the college due to differing views on teaching and learning, focused on growth in student enrollment rather than improving the existing school.[49]
+
+Seattle was also the home base of impresario Alexander Pantages who, starting in 1902, opened a number of theaters in the city exhibiting vaudeville acts and silent movies. His activities soon expanded, and the thrifty Greek went on and became one of America's greatest theater and movie tycoons. Between Pantages and his rival John Considine, Seattle was for a while the western United States' vaudeville mecca. B. Marcus Priteca, the Scottish-born and Seattle-based architect, built several theaters for Pantages, including some in Seattle. The theaters he built for Pantages in Seattle have been either demolished or converted to other uses, but many other theaters survive in other cities of the U.S., often retaining the Pantages name; Seattle's surviving Paramount Theatre, on which he collaborated, was not a Pantages theater.
+Post-war years: aircraft and software
+Building the Seattle Center Monorail, 1961. Looking north up Fifth Avenue from Virginia Street.
+
+War work again brought local prosperity during World War II, this time centered on Boeing aircraft. The war dispersed the city's numerous Japanese-American businessmen due to the Japanese American internment. After the war, the local economy dipped. It rose again with Boeing's growing dominance in the commercial airliner market.[50] Seattle celebrated its restored prosperity and made a bid for world recognition with the Century 21 Exposition, the 1962 World's Fair.[51] Another major local economic downturn was in the late 1960s and early 1970s, at a time when Boeing was heavily affected by the oil crises, loss of Government contracts, and costs and delays associated with the Boeing 747. Many people left the area to look for work elsewhere, and two local real estate agents put up a billboard reading "Will the last person leaving Seattle – Turn out the lights."[52]
+
+Seattle remained the corporate headquarters of Boeing until 2001, when the company separated its headquarters from its major production facilities; the headquarters were moved to Chicago.[53] The Seattle area is still home to Boeing's Renton narrow-body plant (where the 707, 720, 727, and 757 were assembled, and the 737 is assembled today) and Everett wide-body plant (assembly plant for the 747, 767, 777, and 787). The company's credit union for employees, BECU, remains based in the Seattle area, though it is now open to all residents of Washington.
+
+As prosperity began to return in the 1980s, the city was stunned by the Wah Mee massacre in 1983, when 13 people were killed in an illegal gambling club in the Seattle Chinatown-International District.[54] Beginning with Microsoft's 1979 move from Albuquerque, New Mexico, to nearby Bellevue, Washington,[55] Seattle and its suburbs became home to a number of technology companies including Amazon.com, F5 Networks, RealNetworks, Nintendo of America, McCaw Cellular (now part of AT&T Mobility), VoiceStream (now T-Mobile), and biomedical corporations such as HeartStream (later purchased by Philips), Heart Technologies (later purchased by Boston Scientific), Physio-Control (later purchased by Medtronic), ZymoGenetics, ICOS (later purchased by Eli Lilly and Company) and Immunex (later purchased by Amgen). This success brought an influx of new residents with a population increase within city limits of almost 50,000 between 1990 and 2000,[56] and saw Seattle's real estate become some of the most expensive in the country.[57] In 1993, the movie Sleepless in Seattle brought the city further national attention.[58] Many of the Seattle area's tech companies remained relatively strong, but the frenzied dot-com boom years ended in early 2001.[59][60]
+
+Seattle in this period attracted widespread attention as home to these many companies, but also by hosting the 1990 Goodwill Games[61] and the APEC leaders conference in 1993, as well as through the worldwide popularity of grunge, a sound that had developed in Seattle's independent music scene.[62] Another bid for worldwide attention—hosting the World Trade Organization Ministerial Conference of 1999—garnered visibility, but not in the way its sponsors desired, as related protest activity and police reactions to those protests overshadowed the conference itself.[63] The city was further shaken by the Mardi Gras Riots in 2001, and then literally shaken the following day by the Nisqually earthquake.[64]
+
+Another boom began as the city emerged from the Great Recession which commenced when Amazon.com moved its headquarters from North Beacon Hill to South Lake Union. This initiated a historic construction boom which resulted in the completion of twice as many apartments in Seattle in 2017, which is more than any other year in the city’s history.[65] For the next five years beginning in 2010, Seattle gained an average of 14,511 residents per year, with the growth strongly skewed toward the center of the city,[66] as unemployment dropped from roughly 9 percent to 3.6 percent.[67] The city has found itself "bursting at the seams", with over 45,000 households spending more than half their income on housing and at least 2,800 people homeless, and with the country's sixth-worst rush hour traffic.[67]
+Geography
+
+With a land area of 83.9 square miles (217.3 km²),[68] Seattle is the northernmost city with at least 500,000 people in the United States, farther north than Canadian cities such as Toronto, Ottawa, and Montreal, at about the same latitude as Salzburg, Austria.
+
+The topography of Seattle is hilly. The city lies on several hills, including Capitol Hill, First Hill, West Seattle, Beacon Hill, Magnolia, Denny Hill, and Queen Anne. The Kitsap and the Olympic peninsulas along with the Olympic mountains lie to the west of Puget Sound, while the Cascade Range and Lake Sammamish lie to the east of Lake Washington. The city has over 5,540 acres (2,242 ha) of parkland.
 </div>
 </div>
 </div>
